--- a/tea.html
+++ b/tea.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <title>Tea</title>
 
+     <link href="https://fonts.googleapis.com/css?family=Fauna+One" rel="stylesheet">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 
   
