--- a/tea.html
+++ b/tea.html
@@ -28,7 +28,7 @@
   </g>
 </svg>
 <div class="page">
-    <div id="tea"></div>
+    <div id="tea" class="tea"></div>
     </div>
     
 <script src="js/jquery.min.js"></script>
